<package>
  <name>depthimage_to_laserscan</name>
  <version>1.0.7</version>
  <description>depthimage_to_laserscan</description>
  <maintainer email="chadrockey@gmail.com">Chad Rockey</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/depthimage_to_laserscan</url>
  <url type="bugtracker">https://github.com/ros-perception/depthimage_to_laserscan/issues</url>
  <url type="repository">https://github.com/ros-perception/depthimage_to_laserscan</url>

  <author>Chad Rockey</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gtest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
