<?xml version="1.0"?>
<package format="2">
  <name>depthimage_to_laserscan</name>
  <version>2.5.0</version>
  <description>depthimage_to_laserscan</description>
  <author>Chad Rockey</author>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/depthimage_to_laserscan</url>
  <url type="bugtracker">https://github.com/ros-perception/depthimage_to_laserscan/issues</url>
  <url type="repository">https://github.com/ros-perception/depthimage_to_laserscan</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>image_geometry</depend>
  <depend>libopencv-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
